--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KidsEdu - Educação Infantil Inovadora | Transformando o Futuro das Crianças</title>
-    <meta name="description" content="Plataforma de educação infantil com metodologia inovadora, professores especializados e atividades lúdicas para o desenvolvimento integral das crianças." />
-    <meta name="author" content="KidsEdu" />
+    <title>Curuka Kids - Segurança Infantil</title>
+    <meta name="description" content="Um sistema moderno que utiliza NFC para proteger crianças em tempo real. Segurança e tranquilidade na palma da sua mão.
 
-    <meta property="og:title" content="KidsEdu - Educação Infantil Inovadora" />
-    <meta property="og:description" content="Transformando o futuro através de educação de qualidade para crianças" />
+" />
+    <meta name="author" content="Curuka" />
+
+    <meta property="og:title" content="Curuka - Segurança Infanti" />
+    <meta property="og:description" content="Segurança e tranquilidade na palma da sua mão." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
